<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollFeed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SetAlarmActivity"
    tools:showIn="@layout/activity_set_alarm"
    android:background="@drawable/centre_background"
    android:focusableInTouchMode="true">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/txtInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/custom_message"
                style="@style/modifiedEditText"
                android:hint="@string/name"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtMessage"
                style="@style/modifiedEditText"
                android:ems="10"
                android:hint="@string/Note"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/txtInputhour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txthour"
                style="@style/modifiedEditText"
                android:hint="@string/Hour"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/txtInputmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtmin"
                style="@style/modifiedEditText"
                android:hint="@string/Min"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSend"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/centre_button"
            android:text="@string/send"
            android:textColor="@color/setAlarmButton" />



    </androidx.recyclerview.widget.RecyclerView>
</androidx.core.widget.NestedScrollView>